// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api should execute a GET successfully with json 1`] = `
Object {
  "hello": "world",
}
`;

exports[`api should execute a POST successfully 1`] = `"ok"`;

exports[`api should reject for a not found error 1`] = `
Object {
  "data": "",
  "status": "FAIL",
}
`;

exports[`api should reject for a server error with JSON response 1`] = `
Object {
  "data": Object {
    "error": "FAILED",
  },
  "status": "FAIL",
}
`;

exports[`api should reject for a server error with no response 1`] = `
Object {
  "data": "",
  "status": "FAIL",
}
`;
